...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/activity_detail_tvshow_tv_title"
                    style="@style/CodeFontBold"
                    android:layout_marginVertical="12dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_detail_tvshow_fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite_button"
...
