<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/menu_tvshow"
        android:icon="@drawable/ic_tvshow"
        android:title="@string/tv_show" />

</menu>